--- a/package.json
+++ b/package.json
@@ -1,57 +1,51 @@
 {
-  "name": "app-contacts",
-  "description": "An simple Aurelia contact manager sample application.",
-  "version": "1.0.0",
+  "name": "contact-manager",
+  "description": "An Aurelia client application.",
+  "version": "0.1.0",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/aurelia/app-contacts"
+    "type": "???",
+    "url": "???"
   },
-  "homepage": "http://aurelia.io",
-  "bugs": {
-    "url": "https://github.com/aurelia/binding/issues"
-  },
-  "license": "CC0-1.0",
-  "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
+  "license": "MIT",
   "dependencies": {
+    "aurelia-animator-css": "^1.0.0",
     "aurelia-bootstrapper": "^1.0.0",
     "bluebird": "^3.4.1",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.0",
-    "nprogress": "^0.2.0"
+    "jquery": "^2.2.4",
+    "nprogress": "^0.2.0",
+    "requirejs": "^2.3.2",
+    "text": "github:requirejs/text#latest"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "aurelia-cli": "^0.17.0",
+    "aurelia-cli": "^0.24.0",
     "aurelia-testing": "^1.0.0-beta.2.0.0",
-    "aurelia-tools": "^0.2.4",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-syntax-flow": "^6.8.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-register": "^6.11.6",
+    "aurelia-tools": "^0.2.2",
     "browser-sync": "^2.13.0",
     "connect-history-api-fallback": "^1.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^6.1.2",
     "gulp-changed-in-place": "^2.0.3",
-    "gulp-eslint": "^3.0.1",
-    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.0.0-alpha",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.1.2",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "gulp-notify": "^2.2.0",
     "minimatch": "^3.0.2",
     "through2": "^2.0.1",
-    "uglify-js": "^2.7.0"
+    "uglify-js": "^2.6.3",
+    "vinyl-fs": "^2.4.3",
+    "event-stream": "^3.3.3",
+    "gulp-typescript": "^2.13.6",
+    "gulp-tslint": "^5.0.0",
+    "tslint": "^3.11.0",
+    "typescript": ">=1.9.0-dev || ^2.0.0",
+    "typings": "^1.3.0",
+    "gulp-htmlmin": "^3.0.0",
+    "html-minifier": "^3.2.3",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-typescript-preprocessor": "^0.2.1"
   }
 }
