--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/sortablejs": "^1.3.31",
     "aurelia-animator-css": "^1.0.0",
     "aurelia-bootstrapper": "^1.0.0",
+    "aurelia-sortablejs": "^1.0.0",
     "bluebird": "^3.4.1",
     "bootstrap": "^3.3.7",
     "jquery": "^2.2.4",
     "nprogress": "^0.2.0",
     "requirejs": "^2.3.2",
+    "sortablejs": "^1.5.0-rc1",
     "text": "github:requirejs/text#latest"
   },
   "peerDependencies": {},
