--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-notify": "^2.2.0",
+    "gulp-sass": "^3.1.0",
     "minimatch": "^3.0.2",
     "through2": "^2.0.1",
     "uglify-js": "^2.6.3",
